--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,14 +8,24 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(px4_msgs REQUIRED)
-find_package(ament_python REQUIRED)
 
 add_executable(offboard_control_node src/offboard_control_node.cpp)
+add_executable(sensor_combined_listener_node src/sensor_combined_listener.cpp)
 
 ament_target_dependencies(offboard_control_node
   rclcpp
   px4_msgs
 )
+
+ament_target_dependencies(sensor_combined_listener_node
+  rclcpp
+  px4_msgs
+)
+
+include_directories(
+  include
+)
+
 
 install(DIRECTORY
   launch
@@ -30,6 +40,11 @@ install(PROGRAMS
 
 install(TARGETS
   offboard_control_node
+  DESTINATION lib/${PROJECT_NAME}
+)
+
+install(TARGETS
+  sensor_combined_listener_node
   DESTINATION lib/${PROJECT_NAME}
 )
 
