--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(px4_msgs REQUIRED)
 
 add_executable(offboard_control_node src/offboard_control_node.cpp)
 add_executable(sensor_combined_listener_node src/sensor_combined_listener.cpp)
+add_executable(advertiser_node src/advertiser.cpp)
 
 ament_target_dependencies(offboard_control_node
   rclcpp
@@ -18,6 +19,11 @@ ament_target_dependencies(offboard_control_node
 )
 
 ament_target_dependencies(sensor_combined_listener_node
+  rclcpp
+  px4_msgs
+)
+
+ament_target_dependencies(advertiser_node
   rclcpp
   px4_msgs
 )
@@ -45,6 +51,11 @@ install(TARGETS
 
 install(TARGETS
   sensor_combined_listener_node
+  DESTINATION lib/${PROJECT_NAME}
+)
+
+install(TARGETS
+  advertiser_node
   DESTINATION lib/${PROJECT_NAME}
 )
 
